--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,7 +153,7 @@ svg {
 @media (max-width: 767px) {
   .ButtonTopUP {
     border: transparent;
-    outline-color: none; } }
+    box-shadow: none; } }
 
 .ButtonLoginSignup {
   cursor: pointer;
@@ -185,27 +185,6 @@ svg {
   .ButtonLoginSignup__iconLogin {
     width: 0px;
     height: 0px; } }
-
-.ButtonProfile {
-  height: 40px;
-  border-radius: 10px;
-  background-color: #FFCD05;
-  display: flex;
-  align-items: center;
-  padding-top: 0px;
-  color: #3E3E3E;
-  font-family: Raleway;
-  font-size: 22px;
-  font-weight: 800;
-  letter-spacing: 1px;
-  margin: 10px; }
-  .ButtonProfile__iconLogin {
-    width: 17px;
-    height: 25px; }
-  .ButtonProfile__Profile {
-    padding-top: 20px; }
-  .ButtonProfile__P {
-    padding-top: 20px; }
 
 @media (max-width: 767px) {
   .ButtonLogin {
@@ -267,6 +246,19 @@ svg {
   .ButtonProfile__iconProfile {
     width: 15.219px;
     height: 25px; }
+
+@media (max-width: 767px) {
+  .ButtonProfile {
+    background-color: transparent !important;
+    background: transparent;
+    color: var(--color-yellow-1);
+    margin-left: 0;
+    border: none; } }
+
+@media (max-width: 767px) {
+  .ButtonProfile__iconProfile {
+    width: 0px;
+    height: 0px; } }
 
 @media (max-width: 767px) {
   .ButtonLogin {
@@ -474,7 +466,7 @@ svg {
       justify-content: center;
       align-items: center; }
       .bidding__2__col1__logo {
-        width: 75%; }
+        width: 50%; }
     .bidding__2__col2__pulsa {
       color: #FFFFFF;
       font-family: Raleway;
@@ -796,7 +788,7 @@ body {
   margin: 2rem; }
 
 .DropdownUser {
-  width: 150px;
+  width: 100%;
   height: 40px;
   padding: 0rem;
   padding-left: 15px;
@@ -823,15 +815,15 @@ body {
     line-height: 11px;
     text-align: center; }
   .DropdownUser__item {
-    width: 150px;
     min-width: 0rem;
     background-color: #FFCD05;
     border-radius: 10px; }
   .DropdownUser__inside {
+    border-radius: 10px;
     height: 50px;
     min-width: 0rem;
     background-color: #FFCD05;
-    color: #3E3E3E;
+    color: #3E3E3E !important;
     font-family: Raleway;
     font-size: 22px;
     font-weight: 600; }
@@ -851,6 +843,11 @@ body {
   margin-right: 9px;
   margin-left: 31px; }
 
+@media (max-width: 767px) {
+  .dropdownLoginHr {
+    width: 0px;
+    height: 0px; } }
+
 .dropdownProfileHr {
   border: none;
   border-left: 1px solid black;
@@ -862,7 +859,7 @@ body {
   margin-left: 20px; }
 
 @media (max-width: 767px) {
-  .dropdownLoginHr {
+  .dropdownProfileHr {
     width: 0px;
     height: 0px; } }
 
