--- a/public/sass/reusable/_components.scss
+++ b/public/sass/reusable/_components.scss
@@ -7,7 +7,7 @@
 }
 
 .DropdownUser{
-  width: 150px;
+  width: 100%;
   height: 40px;
   padding: 0rem ;
   padding-left: 15px ;
@@ -40,17 +40,17 @@
 
   }
   &__item{
-    width: 150px ;
     min-width: 0rem ;
     background-color: #FFCD05 ;
     border-radius: 10px ;
   }
 
   &__inside{
+    border-radius: 10px;
     height: 50px ;
     min-width: 0rem ;
     background-color: #FFCD05 ;
-    color: #3E3E3E ;
+    color: #3E3E3E !important;
     font-family: Raleway;
   	font-size: 22px;
   	font-weight: 600;
@@ -73,7 +73,12 @@
   margin-right: 9px ;
   margin-left: 31px ;
 }
-
+@media (max-width: 767px)  {
+  .dropdownLoginHr{
+    width: 0px;
+    height: 0px;
+  }
+}
 .dropdownProfileHr{
   border: none ;
   border-left: 1px solid hsla(200, 10%, 0%,100);
@@ -85,7 +90,7 @@
   margin-left: 20px ;
 }
 @media (max-width: 767px)  {
-  .dropdownLoginHr{
+  .dropdownProfileHr{
     width: 0px;
     height: 0px;
   }
