--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -11,9 +11,10 @@
 @import "pages/bidding";
 @import "pages/product";
 @import "pages/home";
+@import "./pages/insertphone.scss";
+
 
 // reuseable components
 @import "reusable/base";
 @import "reusable/components";
 @import "reusable/variables";
-
