--- a/public/css/style.css
+++ b/public/css/style.css
@@ -760,7 +760,7 @@ svg {
   .game__container {
     margin: auto;
     width: 100%;
-    max-width: 600px; }
+    max-width: 720px; }
   .game__slotLabel {
     text-align: center;
     font-family: raleway; }
@@ -769,63 +769,137 @@ svg {
       font-size: 48px;
       font-weight: 900;
       line-height: 56px; }
-    .game__slotLabel__p {
+    .game__slotLabel__paragraph {
       color: white;
       font-size: 14px;
       font-weight: 500;
       line-height: 16px; }
   .game__slotCoin {
-    width: 5%; }
-  .game__slotitems {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .game__slotCoin__icon {
+      width: 10%;
+      margin: 10px; }
+    .game__slotCoin__label {
+      margin: 10px;
+      color: #FFFFFF;
+      font-family: Raleway;
+      font-size: 24px;
+      font-weight: bold;
+      line-height: 29px; }
+  .game__container2 {
     display: flex;
     justify-content: center; }
+  .game__slotItems {
+    display: flex;
+    justify-content: center;
+    width: 360px;
+    border-radius: 30px;
+    background: linear-gradient(180deg, #FAD961 0%, #F76B1C 100%);
+    padding: 20px;
+    margin-bottom: 10px; }
+    .game__slotItems__box {
+      background-color: black;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      border-radius: 10px;
+      border: 3px solid; }
   .game__slotButton {
     display: flex;
     justify-content: center; }
+    .game__slotButton__container3 {
+      width: 40%; }
+    .game__slotButton__start {
+      width: 100%;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      color: #FFFFFF;
+      font-family: Raleway;
+      font-size: 25px;
+      font-weight: 900;
+      letter-spacing: 3px;
+      line-height: 33px;
+      border-radius: 8px;
+      background: linear-gradient(180deg, #FAD961 0%, #F76B1C 100%); }
+
+@media (min-width: 275px) and (max-width: 500px) {
+  .game__slotItems {
+    padding: 15px;
+    width: 310px; } }
 
 .box1 {
-  width: 100px;
-  height: 100px;
-  background-color: black;
-  margin: 5px; }
+  width: 80%;
+  height: 140px;
+  border-radius: 10px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  margin-left: 5px;
+  margin-right: 5px;
+  background-color: white; }
 
 .box2 {
-  width: 100px;
-  height: 100px;
-  background-color: yellow;
-  margin: 5px; }
+  width: 80%;
+  height: 140px;
+  border-radius: 10px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  margin-left: 5px;
+  margin-right: 5px;
+  background-color: yellow; }
 
 .box3 {
-  width: 100px;
-  height: 100px;
-  background-color: green;
-  margin: 5px; }
+  width: 80%;
+  height: 140px;
+  border-radius: 10px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  margin-left: 5px;
+  margin-right: 5px;
+  background-color: green; }
 
 .box4 {
-  width: 100px;
-  height: 100px;
-  background-color: grey;
-  margin: 5px; }
+  width: 80%;
+  height: 140px;
+  border-radius: 10px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  margin-left: 5px;
+  margin-right: 5px;
+  background-color: grey; }
 
 .box5 {
-  width: 100px;
-  height: 100px;
-  background-color: blue;
-  margin: 5px; }
+  width: 80%;
+  height: 140px;
+  border-radius: 10px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  margin-left: 5px;
+  margin-right: 5px;
+  background-color: blue; }
 
 .box6 {
-  width: 100px;
-  height: 100px;
-  background-color: purple;
-  margin: 5px; }
+  width: 80%;
+  height: 140px;
+  border-radius: 10px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  margin-left: 5px;
+  margin-right: 5px;
+  background-color: purple; }
 
 .boxaladin {
   background-image: url("https://steemit-production-imageproxy-thumbnail.s3.amazonaws.com/U5du7QzV9m547GdgFGVuh2ckhRKGL9Q_1680x8400");
-  width: 100px;
-  height: 100px;
-  margin: 5px;
-  background-color: black;
-  background-size: 100px 100px; }
+  width: 80%;
+  height: 140px;
+  border-radius: 10px;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  margin-left: 5px;
+  margin-right: 5px;
+  background-color: white;
+  background-size: 100% 100%; }
 
 * {
   margin: 0;
@@ -1017,4 +1091,5 @@ body {
   --color-red-4: #DA4733;
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+  --linear-game: linear-gradient(180deg, #FAD961 0%, #F76B1C 100%);
   --line: 1px solid var(--color-grey-light-2); }
