--- a/public/sass/reusable/_variables.scss
+++ b/public/sass/reusable/_variables.scss
@@ -39,5 +39,6 @@
     --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
     --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
 
+    --linear-game : linear-gradient(180deg, #FAD961 0%, #F76B1C 100%);
     --line: 1px solid var(--color-grey-light-2);
 }
