--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -11,8 +11,8 @@
 @import "pages/bidding";
 @import "pages/product";
 @import "pages/home";
-@import "./pages/insertphone.scss";
-
+@import "./pages/insertphone";
+@import "./pages/pembayaran";
 
 // reuseable components
 @import "reusable/base";
