--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -144,48 +144,6 @@
   }
 }
 
-.ButtonProfile{
-  height: 40px;
-  border-radius: 10px;
-  background-color: #FFCD05;
-  display: flex;
-  align-items: center;
-  padding-top: 0px;
-
-  color: #3E3E3E;
-  font-family: Raleway;
-  font-size: 22px;
-  font-weight: 800;
-  letter-spacing: 1px;
-  margin: 10px;
-
-  &__iconLogin{
-    width: 17px;
-    height: 25px;
-  }
-  &__iconProfile{
-    width: 15.219px;
-    height: 25px;
-  }
-}
-
-@media (max-width: 767px)  {
-  .ButtonProfile {
-    background-color: transparent !important;
-    background: transparent;
-    color: var(--color-yellow-1);
-    margin-left: 0;
-    border: none;
-  }
-}
-
-@media (max-width: 767px)  {
-  .ButtonProfile__iconProfile{
-    width: 0px;
-    height: 0px;
-  }
-}
-
 
 //media query resposive header for button login
 @media (max-width: 767px)  {
@@ -212,4 +170,107 @@
 //link lupa password
 .lupapass{
     color: var(--color-yellow-1);
+}
+
+.dropProfile{
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  background-color: var(--color-yellow-1);
+
+  &__devide{
+    width: 100%;
+    height: 100%;
+    margin: 0rem;
+    padding: 0rem;
+    border: none;
+
+    display: flex;
+
+  }
+
+  &__big{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: var(--color-yellow-1);
+
+    color: var(--color-grey-5);
+
+    font-family: Raleway;
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 11px;
+    text-align: center;
+
+    border-right: 2px solid var(--color-grey-5);
+
+    width: 75%;
+    height: 100%;
+
+    margin: 0rem;
+    padding: 0rem;
+
+  }
+
+  &__small{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: var(--color-yellow-1);
+
+    width: 25%;
+    height: 100%;
+    justify-content: center;
+
+    margin: 0rem;
+    padding: 0rem;
+
+  }
+
+  &__img{
+    width: 6rem;
+    height: 3rem;
+  }
+
+  &__iconProfile{
+    width: 1rem;
+    height: 1rem;
+  }
+
+}
+
+@media (max-width: 767px)  {
+  .dropProfile {
+    background-color: transparent !important;
+    background: transparent;
+    color: var(--color-yellow-1);
+    border: none;
+  }
+}
+
+@media (max-width: 767px)  {
+  .dropProfile__big {
+    background-color: transparent !important;
+    background: transparent;
+    color: var(--color-yellow-1);
+    border: none;
+    margin-left: 15px;
+  }
+}
+
+@media (max-width: 767px)  {
+  .dropProfile__iconProfile{
+    width: 0px;
+    height: 0px;
+  }
+}
+
+@media (max-width: 767px)  {
+  .dropProfile__small{
+    width: 0px;
+    height: 0px;
+  }
 }
