--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -11,9 +11,10 @@
 @import "pages/bidding";
 @import "pages/product";
 @import "pages/home";
-@import "./pages/insertphone";
-@import "./pages/pembayaran";
+@import "pages/insertphone";
+@import "pages/pembayaran";
 @import "pages/game";
+@import "pages/topupkey";
 
 // reuseable components
 @import "reusable/base";
