--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,6 +132,7 @@ svg {
     padding: 0rem; }
 
 .ButtonTopUP {
+  cursor: inherit;
   height: 40px;
   width: 200px;
   border: 2px solid #FFCD05;
@@ -145,10 +146,12 @@ svg {
   text-align: center;
   margin-right: 20px; }
   .ButtonTopUP__label {
-    font-size: 18px; }
+    font-size: 18px;
+    cursor: inherit; }
     .ButtonTopUP__label__italic {
       font-size: 18px;
-      font-style: italic; }
+      font-style: italic;
+      cursor: inherit; }
 
 @media (max-width: 767px) {
   .ButtonTopUP {
@@ -313,61 +316,6 @@ svg {
   .dropProfile__small {
     width: 0px;
     height: 0px; } }
-
-.Bar-First {
-  margin: 0rem;
-  padding: 0rem; }
-  .Bar-First__col1 {
-    padding: 0rem; }
-  .Bar-First__col2 {
-    padding: 0rem;
-    position: relative; }
-  .Bar-First__banner {
-    width: 100%;
-    float: left;
-    max-width: 100%;
-    height: auto; }
-  .Bar-First__label {
-    width: 300px;
-    font-size: 25px;
-    color: white;
-    background-color: black;
-    opacity: 0.65;
-    position: absolute;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    top: 70%;
-    transform: translateY(-50%); }
-    .Bar-First__label__TextTop {
-      margin-bottom: 10px; }
-    .Bar-First__label__TextBottom {
-      font-weight: bolder; }
-
-.Bar-Second {
-  background-color: var(--color-primary-2);
-  height: 10rem;
-  clip-path: polygon(50% 0%, 100% 0, 100% 50%, 50% 100%, 0% 50%, 0 0); }
-  .Bar-Second__Text {
-    font-size: 4rem;
-    color: var(--color-primary-1); }
-
-@media screen and (max-width: 574px) and (min-width: 300px) {
-  .Bar-Second-Text {
-    font-size: 21.7px; } }
-
-.Bar-Third {
-  background-color: var(--color-grey-light-4);
-  height: 11rem;
-  padding: 0rem; }
-  .Bar-Third__clip {
-    clip-path: polygon(50% 0%, 100% 0, 100% 50%, 50% 100%, 0% 50%, 0 0);
-    background-color: var(--white);
-    margin: 0rem;
-    padding: 0rem; }
-  .Bar-Third__img {
-    height: 5rem;
-    margin: 3rem; }
 
 .Signup {
   display: flex;
