--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -15,6 +15,7 @@
 @import "pages/pembayaran";
 @import "pages/game";
 @import "pages/topupkey";
+@import "pages/user";
 
 // reuseable components
 @import "reusable/base";
