--- a/public/sass/pages/_game.scss
+++ b/public/sass/pages/_game.scss
@@ -67,6 +67,15 @@
 				border-radius: 10px;
 				border: 3px solid;
 		}
+
+			&__items{
+				width: 300px;
+				animation-duration: 5s;
+				animation-timing-function: ease;
+				animation-delay: 5.2s;
+				animation-fill-mode: backwards;
+				
+		}
 	}
 
 	&__slotButton {
