--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -248,9 +248,10 @@ svg {
   color: var(--color-yellow-1); }
 
 .dropProfile {
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
+  width: 205px;
+  height: 44px;
+  padding: 0;
+  border-radius: 10px;
   background-color: var(--color-yellow-1); }
   .dropProfile__devide {
     width: 100%;
@@ -260,6 +261,7 @@ svg {
     border: none;
     display: flex; }
   .dropProfile__big {
+    width: 75%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -271,16 +273,16 @@ svg {
     line-height: 11px;
     text-align: center;
     border-right: 2px solid var(--color-grey-5);
-    width: 75%;
-    height: 100%;
     margin: 0rem;
-    padding: 0rem; }
+    padding: 0rem;
+    margin-left: 10px;
+    padding-right: 10px; }
   .dropProfile__small {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--color-yellow-1);
-    width: 25%;
+    width: 16%;
     height: 100%;
     justify-content: center;
     margin: 0rem;
@@ -289,8 +291,8 @@ svg {
     width: 6rem;
     height: 3rem; }
   .dropProfile__iconProfile {
-    width: 1rem;
-    height: 1rem; }
+    width: 55%;
+    height: 20px; }
 
 @media (max-width: 767px) {
   .dropProfile {
