--- a/public/sass/reusable/_components.scss
+++ b/public/sass/reusable/_components.scss
@@ -7,58 +7,30 @@
 }
 
 .DropdownUser{
-  width: 100%;
-  height: 40px;
-  padding: 0rem ;
-  padding-left: 15px ;
-  border-radius: 10px ;
-  background-color: #FFCD05 ;
-  display: flex ;
-  align-items: center ;
-
-  color: #3E3E3E ;
-  font-family: Raleway ;
-  font-size: 22px ;
-  font-weight: 800 ;
-  letter-spacing: 1px ;
-  margin: 10px ;
-
-  &__icon1{
-    width: 25px ;
-    height: 25px ;
-  }
-
-  &__label {
-  	height: 10px;
-  	width: 150px;
-  	color: #3E3E3E;
-  	font-family: Raleway;
-  	font-size: 22px;
-  	font-weight: 600;
-  	line-height: 11px;
-  	text-align: center;
-
-  }
   &__item{
-    min-width: 0rem ;
     background-color: #FFCD05 ;
     border-radius: 10px ;
+    min-width: 205px;
   }
-
   &__inside{
-    border-radius: 10px;
-    height: 50px ;
-    min-width: 0rem ;
-    background-color: #FFCD05 ;
     color: #3E3E3E !important;
+    background-color: #FFCD05 ;
+    height: 50px ;
     font-family: Raleway;
   	font-size: 22px;
-  	font-weight: 600;
+    font-weight: 600;
+    &:hover{
+      background-color: #FFCD05 ;
+    }
     &__link{
-      color: #3E3E3E ;
       font-family: Raleway;
       font-size: 22px;
       font-weight: 600;
+      color: #3E3E3E;
+      &:hover{
+        color: #3E3E3E ;
+        // text-decoration: none;
+      }
     }
   }
 }
