--- a/public/sass/pages/_user.scss
+++ b/public/sass/pages/_user.scss
@@ -1,7 +1,7 @@
 .User{
     padding: 2.5%;
-    padding-left: 35%;
-    padding-right: 35%;
+    padding-left: 20%;
+    padding-right: 20%;
     background-color: var(--color-grey-5);   
     color: var(--color-yellow-1);
     border: 5px solid #FFCD05;
@@ -21,11 +21,26 @@
 
     &__Phone{
         display: flex;
+        flex-direction: column;
 
         &__1{
+            width: 100%;
         }
         &__2{
-            width: 75%;
+            width: 100%;
+            display: flex;
+        }
+        &__3{
+            width: 100%;
+            display: flex;
+
+            &__right{
+                width: 50%;
+            }
+
+            &__left{
+                width: 50%;
+            }
         }
     }
 }
