--- a/public/sass/reusable/_components.scss
+++ b/public/sass/reusable/_components.scss
@@ -11,6 +11,8 @@
     background-color: #FFCD05 ;
     border-radius: 10px ;
     min-width: 205px;
+    font-family: Raleway;
+
   }
   &__inside{
     color: #3E3E3E !important;
