--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -138,9 +138,10 @@
 }
 
 .LogoFooter{
-  width: 250px;
-  height: 70px;
-  margin: 2rem;
+  width: 240px;
+  height: 60px;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .LogoSosmed{
