--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -181,16 +181,24 @@
   padding: 0;
   border-radius: 10px;
   background-color: var(--color-yellow-1);
-
+  &:active{
+    background-color: var(--color-yellow-1);
+  }
+  &:hover{
+    background-color: var(--color-yellow-1);
+  } 
   &__devide{
     width: 100%;
     height: 100%;
     margin: 0rem;
     padding: 0rem;
     border: none;
-
     display: flex;
-
+    outline: none;
+    &:active{
+      border-radius: 10px;
+      background-color: var(--color-yellow-1);
+    }
   }
 
   &__big{
@@ -198,22 +206,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
     background-color: var(--color-yellow-1);
-
     color: var(--color-grey-5);
-
     font-family: Raleway;
     font-size: 22px;
     font-weight: 600;
     line-height: 11px;
     text-align: center;
-
     border-right: 2px solid var(--color-grey-5);
-
     margin: 0rem;
     padding: 0rem;
-
     margin-left: 10px;
     padding-right: 10px;
   }
@@ -222,23 +224,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
     background-color: var(--color-yellow-1);
-
     width: 16%;
     height: 100%;
     justify-content: center;
-
     margin: 0rem;
     padding: 0rem;
-
   }
-
   &__img{
     width: 6rem;
     height: 3rem;
   }
-
   &__iconProfile{
     width: 55%;
     height: 20px;
