redesign user page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -945,36 +945,90 @@ svg {
     color: var(--color-yellow-1); }
 
 .User {
-  padding: 2.5%;
-  padding-left: 20%;
-  padding-right: 20%;
-  background-color: var(--color-grey-5);
-  color: var(--color-yellow-1);
-  border: 5px solid #FFCD05; }
+  background-color: var(--color-grey-5); }
+  .User__container {
+    margin: auto;
+    width: 100%;
+    max-width: 720px;
+    color: var(--color-yellow-1); }
   .User__Label {
-    color: var(--color-yellow-1);
     display: flex;
     justify-content: center;
+    font-size: 40px;
+    color: var(--color-yellow-1);
+    padding: 2.5%; }
+  .User__show {
+    border-bottom: 2px solid #FFCD05;
     font-size: 30px; }
-  .User__logo {
-    width: 25px;
-    height: 25px;
-    margin: 5px; }
+    .User__show__logo {
+      width: 25px;
+      height: 25px;
+      margin-right: 5%; }
   .User__Phone {
     display: flex;
-    flex-direction: column; }
-    .User__Phone__1 {
+    flex-direction: column;
+    font-size: 30px; }
+    .User__Phone__row1 {
       width: 100%; }
-    .User__Phone__2 {
+    .User__Phone__row2 {
       width: 100%;
-      display: flex; }
-    .User__Phone__3 {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end; }
+      .User__Phone__row2__li {
+        display: flex;
+        border: orange 4 px solid; }
+      .User__Phone__row2__number {
+        width: 75%;
+        display: flex;
+        justify-content: flex-start; }
+      .User__Phone__row2__unverify {
+        width: 75%;
+        display: flex;
+        justify-content: flex-end; }
+        .User__Phone__row2__unverify__1 {
+          width: 33.3%; }
+          .User__Phone__row2__unverify__1__button1 {
+            width: 100%; }
+        .User__Phone__row2__unverify__2 {
+          width: 33.3%; }
+          .User__Phone__row2__unverify__2__button2 {
+            width: 100%; }
+        .User__Phone__row2__unverify__3 {
+          width: 33.3%; }
+          .User__Phone__row2__unverify__3__button3 {
+            width: 100%; }
+      .User__Phone__row2__verify {
+        width: 75%;
+        display: flex;
+        justify-content: flex-end; }
+        .User__Phone__row2__verify__1 {
+          width: 33.3%; }
+          .User__Phone__row2__verify__1__button4 {
+            width: 100%;
+            text-align: center; }
+        .User__Phone__row2__verify__2 {
+          width: 33.3%; }
+          .User__Phone__row2__verify__2__button5 {
+            width: 100%; }
+        .User__Phone__row2__verify__3 {
+          width: 33.3%;
+          display: flex;
+          justify-content: center;
+          align-items: center; }
+          .User__Phone__row2__verify__3__check {
+            height: 20px; }
+    .User__Phone__row3 {
       width: 100%;
-      display: flex; }
-      .User__Phone__3__right {
-        width: 50%; }
-      .User__Phone__3__left {
-        width: 50%; }
+      height: 10%;
+      display: flex;
+      justify-content: space-around; }
+      .User__Phone__row3__button1 {
+        width: 40%;
+        margin: 5%; }
+      .User__Phone__row3__button2 {
+        width: 40%;
+        margin: 5%; }
 
 * {
   margin: 0;
