--- a/public/sass/pages/_user.scss
+++ b/public/sass/pages/_user.scss
@@ -1,45 +1,128 @@
 .User{
-    padding: 2.5%;
-    padding-left: 20%;
-    padding-right: 20%;
-    background-color: var(--color-grey-5);   
-    color: var(--color-yellow-1);
-    border: 5px solid #FFCD05;
+    background-color: var(--color-grey-5); 
+
+    &__container{
+        margin: auto;
+        width: 100%;
+        max-width: 720px;
+        color: var(--color-yellow-1);
+    }
+    
 
     &__Label{
-        color: var(--color-yellow-1);
         display: flex;
         justify-content: center;    
-        font-size: 30px;
+        font-size: 40px;
+        color: var(--color-yellow-1);
+        padding: 2.5%;
     }
 
-    &__logo{
-        width: 25px;
-        height: 25px;
-        margin: 5px;
+    &__show{
+        border-bottom: 2px solid #FFCD05;
+        font-size: 30px;
+        &__logo{
+            width: 25px;
+            height: 25px;
+            margin-right: 5%;
+        }
     }
 
     &__Phone{
         display: flex;
         flex-direction: column;
+        font-size: 30px;
 
-        &__1{
+        &__row1{
             width: 100%;
         }
-        &__2{
-            width: 100%;
-            display: flex;
-        }
-        &__3{
-            width: 100%;
-            display: flex;
 
-            &__right{
-                width: 50%;
+        &__row2{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+
+            &__li{
+                display: flex;
+                border: orange 4 px solid;
             }
 
-            &__left{
-                width: 50%;
+            &__number{
+                width: 75%;
+                display: flex;
+                justify-content: flex-start;
+            }
+
+            &__unverify{
+                width: 75%;
+                display: flex;
+                justify-content: flex-end;
+
+                &__1{
+                    width: 33.3%;
+                    &__button1{
+                        width: 100%;
+                    }
+                }
+
+                &__2{
+                    width: 33.3%;
+                    &__button2{
+                        width: 100%;
+                    }
+                }
+                &__3{
+                    width: 33.3%;
+                    &__button3{
+                        width: 100%;
+                    }
+                }
+            }
+
+            &__verify{
+                width: 75%;
+                display: flex;
+                justify-content: flex-end;
+                &__1{
+                    width: 33.3%;
+                    &__button4{
+                        width: 100%;
+                        text-align: center;
+                    }
+                }
+                &__2{
+                    width: 33.3%;
+                    &__button5{
+                        width: 100%;
+                    }
+                }
+                &__3{
+                    width: 33.3%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    &__check{
+                        height: 20px;
+                    }
+                }
+            }
+
+        }
+
+        &__row3{
+            width: 100%;
+            height: 10%;
+            display: flex;
+            justify-content: space-around;
+
+            &__button1{
+                width: 40%;
+                margin: 5%;
+            }
+
+            &__button2{
+                width: 40%;
+                margin: 5%;
             }
         }
     }
