--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -140,34 +140,34 @@
   }
 }
 
-//media query resposive header for button login
 @media (max-width: 767px)  {
-  .ButtonLoginSignup {
-    background-color: transparent;
+  .ButtonLoginz {
+    background-color: transparent !important;
+    background: transparent;
     color: var(--color-yellow-1);
-    margin-left: 60px;
+    border: none;
   }
 }
 
-//media query resposive header for icon inside button login
 @media (max-width: 767px)  {
-  .ButtonLoginSignup__iconLogin{
+  .ButtonLoginz__big {
+    background-color: transparent !important;
+    background: transparent;
+    color: var(--color-yellow-1);
+    border: none;
+    margin-left: 15px;
+  }
+}
+
+@media (max-width: 767px)  {
+  .ButtonLoginz__small{
     width: 0px;
     height: 0px;
   }
 }
 
-
 @media (max-width: 767px)  {
-  .ButtonLogin {
-    background-color: transparent;
-    color: var(--color-yellow-1);
-    margin-left: 60px;
-  }
-}
-
-@media (max-width: 767px)  {
-  .ButtonLogin__iconLogin{
+  .ButtonLoginz__iconLogin{
     width: 0px;
     height: 0px;
   }
@@ -248,6 +248,8 @@
   padding: 0;
   border-radius: 10px;
   background-color: var(--color-yellow-1);
+  margin: 1%;
+
   &:active{
     background-color: var(--color-yellow-1);
   }
@@ -329,15 +331,22 @@
 }
 
 @media (max-width: 767px)  {
-  .dropProfile__iconProfile{
+  .dropProfile__small{
     width: 0px;
     height: 0px;
   }
 }
 
 @media (max-width: 767px)  {
-  .dropProfile__small{
+  .dropProfile__iconProfile{
     width: 0px;
     height: 0px;
   }
+}
+
+
+
+
+.header-margin{
+  margin: 2%;
 }
