--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -33,6 +33,7 @@
     &:hover{
       color: black ;
       background-color: var(--color-yellow-1);
+      border: 1px solid #979797 ;
     }
 
   &__icon1{
