--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,17 +159,13 @@ svg {
     border: transparent;
     box-shadow: none; } }
 
-.ButtonLoginz {
+.ButtonHeader {
   width: 205px;
   height: 44px;
   padding: 0;
   border-radius: 10px;
   background-color: var(--color-yellow-1); }
-  .ButtonLoginz:active {
-    background-color: var(--color-yellow-1); }
-  .ButtonLoginz:hover {
-    background-color: var(--color-yellow-1); }
-  .ButtonLoginz__devide {
+  .ButtonHeader__devide {
     width: 100%;
     height: 100%;
     margin: 0rem;
@@ -177,10 +173,10 @@ svg {
     border: none;
     display: flex;
     outline: none; }
-    .ButtonLoginz__devide:active {
+    .ButtonHeader__devide:active {
       border-radius: 10px;
       background-color: var(--color-yellow-1); }
-  .ButtonLoginz__big {
+  .ButtonHeader__big {
     width: 75%;
     display: flex;
     justify-content: center;
@@ -197,7 +193,7 @@ svg {
     padding: 0rem;
     margin-left: 10px;
     padding-right: 10px; }
-  .ButtonLoginz__small {
+  .ButtonHeader__small {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -207,22 +203,22 @@ svg {
     justify-content: center;
     margin: 0rem;
     padding: 0rem; }
-  .ButtonLoginz__img {
+  .ButtonHeader__img {
     width: 6rem;
     height: 3rem; }
-  .ButtonLoginz__iconLogin {
+  .ButtonHeader__iconLogin {
     width: 50%;
     height: 50%; }
 
 @media (max-width: 767px) {
-  .ButtonLoginz {
+  .ButtonHeader {
     background-color: transparent !important;
     background: transparent;
     color: var(--color-yellow-1);
     border: none; } }
 
 @media (max-width: 767px) {
-  .ButtonLoginz__big {
+  .ButtonHeader__big {
     background-color: transparent !important;
     background: transparent;
     color: var(--color-yellow-1);
@@ -230,93 +226,12 @@ svg {
     margin-left: 15px; } }
 
 @media (max-width: 767px) {
-  .ButtonLoginz__small {
+  .ButtonHeader__small {
     width: 0px;
     height: 0px; } }
 
 @media (max-width: 767px) {
-  .ButtonLoginz__iconLogin {
-    width: 0px;
-    height: 0px; } }
-
-.dropProfile {
-  width: 205px;
-  height: 44px;
-  padding: 0;
-  border-radius: 10px;
-  background-color: var(--color-yellow-1);
-  margin: 1%; }
-  .dropProfile:active {
-    background-color: var(--color-yellow-1); }
-  .dropProfile:hover {
-    background-color: var(--color-yellow-1); }
-  .dropProfile__devide {
-    width: 100%;
-    height: 100%;
-    margin: 0rem;
-    padding: 0rem;
-    border: none;
-    display: flex;
-    outline: none; }
-    .dropProfile__devide:active {
-      border-radius: 10px;
-      background-color: var(--color-yellow-1); }
-  .dropProfile__big {
-    width: 75%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--color-yellow-1);
-    color: var(--color-grey-5);
-    font-family: Raleway;
-    font-size: 22px;
-    font-weight: 600;
-    line-height: 11px;
-    text-align: center;
-    border-right: 2px solid var(--color-grey-5);
-    margin: 0rem;
-    padding: 0rem;
-    margin-left: 10px;
-    padding-right: 10px; }
-  .dropProfile__small {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--color-yellow-1);
-    width: 16%;
-    height: 100%;
-    justify-content: center;
-    margin: 0rem;
-    padding: 0rem; }
-  .dropProfile__img {
-    width: 6rem;
-    height: 3rem; }
-  .dropProfile__iconProfile {
-    width: 55%;
-    height: 20px; }
-
-@media (max-width: 767px) {
-  .dropProfile {
-    background-color: transparent !important;
-    background: transparent;
-    color: var(--color-yellow-1);
-    border: none; } }
-
-@media (max-width: 767px) {
-  .dropProfile__big {
-    background-color: transparent !important;
-    background: transparent;
-    color: var(--color-yellow-1);
-    border: none;
-    margin-left: 15px; } }
-
-@media (max-width: 767px) {
-  .dropProfile__small {
-    width: 0px;
-    height: 0px; } }
-
-@media (max-width: 767px) {
-  .dropProfile__iconProfile {
+  .ButtonHeader__iconLogin {
     width: 0px;
     height: 0px; } }
 
