--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -125,8 +125,9 @@
       font-size: 14px;
       font-weight: 800;
       line-height: 16px;
-
-
+    }
+    &__label{
+      text-align: center;
     }
   }
 
@@ -137,6 +138,13 @@
   }
 }
 
+@media (max-width: 767px) {
+  .footerz__bot{
+    padding-left: 5%;
+    padding-right: 5%;
+
+  }
+}
 .LogoFooter{
   width: 240px;
   height: 60px;
@@ -165,8 +173,4 @@
 
 ul {
   list-style-type: none;
-}
-
-svg{
-  fill:blue;
 }
